<resources>
    <string name="app_name">CodeAlpha-eCommerce</string>
    <string name="intro_title">Step into your style\n<font color="#6033ba"> A world of shoes</font></string>
    <string name="intro_text">Browse the latest styles from top brands\nGet personalized recommendations\nEnjoy fast and free shipping</string>
    <string name="let_s_get_start">Let\'s Get Start</string>
    <string name="already_have_an_account_sign_in">Already have an account?<font color="#6033ba"> Sign In</font></string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="see_all">See all</string>
    <string name="offical_brand">Offical Brand</string>
    <string name="recommended">Recommended</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="whishlist">Whishlist</string>
    <string name="cart">Cart</string>
    <string name="explorer">Explorer</string>
    <string name="barndstep">BarndStep</string>
    <string name="my_cart">My Cart</string>
    <string name="your_cart_empty">Your Cart Empty</string>
    <string name="check_out">Check Out</string>
    <string name="subtotal">Subtotal</string>
    <string name="fee_delivery">Fee Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="title">title</string>
    <string name="select_size">Select Size</string>
    <string name="buy_now">Buy Now</string>
</resources>